# cpp-template

./: .bazelrc  .clang-tidy  .gitignore  CMakeLists.txt  README.md  WORKSPACE  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  install-bazel.sh
.github/workflows/: codeql.yml
lib/: CMakeLists.txt  Greeter.cpp  Greeter.h
src/: BUILD  CMakeLists.txt  main.cpp
test/: BUILD  CMakeLists.txt
test/lib/: CMakeLists.txt  GreeterTest.cpp
